# bbpulse

./: .env  .env.backup  API_DOCUMENTATION.md  API_DOCUMENTATION_STANDARDS.md  OPERATOR_REGISTRATION_TO_LISTING_GUIDE.md  OPERATOR_WHATSAPP_GUIDE.md  OTP_VERIFICATION_GUIDE.md  PASSWORD_ENDPOINTS_CONSOLIDATION.md  POSTGRESQL_MIGRATION.md  README.md  REGISTRATION_SYSTEM.md  UNIFIED_PROFILE_ENDPOINTS.md  add_mobile_column_migration.py  bbpulse.db  blubuspulse.db  docker-compose.test.yml  docker-compose.yml  env.example  env.test  init_db.py  interactive_otp_test.py  migrate_auth_system.py  migrate_to_postgresql.py  otp_verification_demo.py  pyproject.toml  pytest.ini  run.py  run_tests.py  run_verification.py  setup_postgresql.py  simple_app.py  test_operator_creation.py  test_postgresql_config.py  test_postgresql_connection.py  test_registration.py  verify_database.py  verify_registration.py  view_database.py
bbpulse/: crud.py  database.py  main.py  models.py  schemas.py  settings.py  test_config.py
bbpulse/auth/: __init__.py  dependencies.py  jwt_handler.py
bbpulse/routes/: __init__.py  auth.py  documents.py  health.py  operators.py  registration.py  unified_profile.py
bbpulse/services/: __init__.py  aws_service.py  email_service.py  otp_service.py  rate_limiter.py  s3_service.py  token_service.py  user_service.py  whatsapp_service.py
blubuspulse/: crud.py  database.py  main.py  models.py  schemas.py  settings.py  test_config.py
tests/: test_auth.py  test_aws_services.py  test_basic.py  test_documents.py  test_main.py  test_operators.py  test_unified_profile.py
(+30 files in other folders)
